# example-cli

./: .gitignore  Application.wafl  Cargo.toml  LICENSE  Makefile  README.md  interface.json
schemas/: cli.apex
src/: components.rs
src/components/: __batch__.rs  cli.rs
